<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_ventas"
        android:icon="@drawable/sale"
        android:title="@string/title_venta" />

    <item
        android:id="@+id/navigation_productos"
        android:icon="@drawable/products"
        android:title="@string/title_producto" />

    <item
        android:id="@+id/navigation_informes"
        android:icon="@drawable/informe_de_datos"
        android:title="@string/title_informe" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_perfil" />

</menu>