<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kgirlproyect.ui.home.HomeFragment"

        tools:layout="@layout/fragment_home" >


        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ventas"
        android:name="com.example.kgirlproyect.ui.ventas.VentasFragment"
        android:label="@string/title_venta"
        tools:layout="@layout/fragment_ventas" >

    </fragment>

    <fragment
        android:id="@+id/navigation_productos"
        android:name="com.example.kgirlproyect.ui.productos.ProductosFragment"
        android:label="@string/title_producto"
        tools:layout="@layout/fragment_productos" >

    </fragment>
    <fragment
        android:id="@+id/navigation_informes"
        android:name="com.example.kgirlproyect.ui.informes.InformesFragment"
        android:label="@string/title_informe"
        tools:layout="@layout/fragment_informes" >

        <action
            android:id="@+id/action_navigation_informes_to_navigation_ventas"
            app:destination="@id/navigation_ventas" />
        <action
            android:id="@+id/action_navigation_informes_to_navigation_productos"
            app:destination="@id/navigation_productos" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.kgirlproyect.ui.settings.settingsFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_settings" >

    </fragment>
</navigation>